--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 :root {
   --white: #fff !important;
   --blue-button: #0c468f;
-  --grey: #ecebeb;
+  --grey: #f7f7f7;
 }
 
 main {
@@ -56,6 +56,7 @@ main .Fichas {
 .carousel-inner {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 
 .carousel_banner {
@@ -72,6 +73,10 @@ main .Fichas {
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 10px;
+}
+.banner__containers img {
+  border-radius: 10px;
 }
 .banner__containers .banner__content__background {
   width: 100%;
@@ -87,7 +92,7 @@ main .Fichas {
   z-index: 11;
   top: 0;
   left: 0;
-  padding: 0rem 2rem 4rem 5rem;
+  padding: 0rem 2rem 1rem 5rem;
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -105,7 +110,7 @@ main .Fichas {
   text-wrap: balance;
   color: var(--white);
   font-weight: normal;
-  padding: 0.5rem 0 1rem 0;
+  padding: 0.5rem 0 0rem 0;
 }
 .banner__containers .banner__content .banner__content__title .banner__content__strong {
   font-weight: 600;
@@ -129,8 +134,8 @@ main .Fichas {
 
 .carousel_control_arrow {
   position: absolute;
-  bottom: -3px;
-  right: 20px;
+  bottom: -38px;
+  right: 1px;
   width: 60px;
   height: 30px;
   z-index: 13;
@@ -142,7 +147,7 @@ main .Fichas {
 .carousel_control_arrow .carousel-control-prev,
 .carousel_control_arrow .carousel-control-next {
   border-radius: 5px;
-  background-color: #0c7284;
+  background-color: var(--blue-button);
   width: 25px;
   height: 25px;
 }
@@ -183,6 +188,7 @@ main .Fichas {
 }
 .CatalogoFG .catalog__content .catalog__content__image,
 .CatalogoValmact .catalog__content .catalog__content__image {
+  box-shadow: 2px 4px 35px rgba(0, 0, 0, 0.442), 0px 10px 10px rgba(0, 0, 0, 0.4235294118);
   width: 120px;
   height: 150px;
   border-radius: 5px;
@@ -540,6 +546,7 @@ main .Fichas {
   padding: 0rem 0 0.5rem 2rem;
 }
 .ContainerCapacitaciones .event__container {
+  box-shadow: 2px 4px 15px #bebebe, 0px 0px 10px #ffffff;
   background: var(--grey);
   height: 100%;
   border-radius: 10px;
@@ -601,12 +608,12 @@ main .Fichas {
   color: var(--white);
   font-weight: 500;
   border-radius: 5px;
-  padding: 1rem;
+  padding: 0.5rem;
   width: 100%;
   text-decoration: none;
 }
 .ContainerCapacitaciones .event__container .social__media {
-  padding: 0 1rem;
+  padding: 1rem 0rem;
 }
 
 /*Eventos y Concursos*/
@@ -614,6 +621,7 @@ main .Fichas {
   padding: 0 1rem 0rem 1rem;
 }
 .SideBar .Menu__content {
+  box-shadow: 2px 4px 25px rgba(190, 190, 190, 0.7294117647), 0px 0px 20px #ffffff;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -632,6 +640,13 @@ main .Fichas {
   width: 100%;
   gap: 2rem;
 }
+.SideBar .Menu__content .Menu__header .menu__icon,
+.SideBar .Menu__content .Menu__footer .menu__icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .SideBar .Menu__content .Menu__header .menu__icon svg,
 .SideBar .Menu__content .Menu__footer .menu__icon svg {
   width: 3rem;
@@ -639,4 +654,20 @@ main .Fichas {
 }
 .SideBar .Menu__content .Menu__footer .menu__icon {
   transform: rotate(90deg);
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*Footer*/
+footer {
+  background: rgb(12, 70, 143);
+  background: linear-gradient(164deg, rgb(12, 70, 143) 32%, rgb(6, 42, 48) 93%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
+  color: var(--white);
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  display: grid;
+  place-content: center;
+  bottom: 0;
+}
+
+/*Footer*//*# sourceMappingURL=main.css.map */
